--- a/index.html
+++ b/index.html
@@ -35,9 +35,12 @@ DOCTYPE: es una declaración de un archivo tipo HTML-->
     <!--Imagenes atráves de internet-->
     <!--<img src="---" alt="">-->
     <!-- SE USA PARA CREAR lineas <h1></h1>-->
+    <div class="presentacion">
     <img src="/Imagen/pajarito.webp" alt="pajarito">
     <img src="/Imagen/qukka3.jpg" alt="qukka">
     <img src="/Imagen/zorri.jpg" atl="zorrito">
+    </div>
+    
 
     <br>
         <!--Indice con anclas-->
