--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ DOCTYPE: es una declaración de un archivo tipo HTML-->
     <div class="presentacion">
     <img src="/Imagen/pajarito.webp" alt="pajarito">
     <img src="/Imagen/qukka3.jpg" alt="qukka">
-    <img src="/Imagen/zorri.jpg" atl="zorrito">
+    <img src="/Imagen/zorrod.jpg" atl="zorrito">
     </div>
     
 
@@ -198,7 +198,7 @@ El término fénec proviene del árabe, que significa zorro, y el epíteto espec
     Suele alcanzar la edad de 10 a 12 años en la naturaleza. Sus depredadores principales son el caracal y las especies africanas.
     Es un animal nocturno que se alimenta de insectos, reptiles, roedores, aves y sus huevos. Su sentido del oído es tan fino que puede incluso escuchar a sus presas en sus madrigueras. Complementa su dieta con frutos (dátiles, bayas, etc.) que encuentra en los oasis, donde también se aprovisiona de agua, aunque puede vivir sin ella.
    </p>
-   <img src="/Imagen/zorrod.jpg" alt="Zorro del desierto">
+   <img src="/Imagen/zorritodesierto.jpg" alt="Zorro del desierto">
    <br>
    <br>
    <br>
